# moore_penrose_ojisan

./: .gitignore  CMakeLists.txt  README.md
script/: main.cpp
